styling and cleanup

--- a/projects.json
+++ b/projects.json
@@ -3,9 +3,9 @@
     {
       "title": "Coffee on Campus",
       "author": "HubBub Coffee; Design: A. Graves, I. Wurman",
-      "section": "Arts & Culture",
-      "date": "December 2016",
-      "description": "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.",
+      "section": "Sponsored Interactives",
+      "date": "Dec. '16",
+      "description": "Use an interactive map to view and compare prices and locations of coffee shops on campus.",
       "sponsored": true,
       "link": "http://projects.thedp.com/2016/11/coffee-on-campus/",
       "image": "https://s3.amazonaws.com/media.dpn/56237_coffeeoncampusimgo.png"
@@ -13,8 +13,8 @@
       "title": "Street Dining Guide",
       "author": "Web Dev: Nolan Hill",
       "section": "Guides",
-      "date": "Fall 2016",
-      "description": "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.",
+      "date": "Fall '16",
+      "description": "Explore Street's favorite places to eat on this interactive map.",
       "sponsored": false,
       "link": "http://projects.thedp.com/2016/10/dining-guide/",
       "image": "https://s3.amazonaws.com/media.dpn/56238_diningguideimgo.png"
@@ -22,28 +22,28 @@
       "title": "Basketball Supplement",
       "author": "J. Schorr, M. Mantis, A. Fischer",
       "section": "Sports",
-      "date": "November 2016",
-      "description": "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.",
+      "date": "Nov. '16'",
+      "description": "A preview of the 2016 basketball season.",
       "sponsored": false,
       "link": "http://projects.thedp.com/2016/11/basketball-preview/",
       "image": "http://media.dpn.s3.amazonaws.com/54828_ogimgbballsuppo.jpg"
     }
   ],
   "articles": [
-    {"title": "Coffee on Campus",
-      "author": "HubBub Coffee",
-      "section": "Arts & Culture",
+    {"title": "Your Courses, Deconstructed",
+      "author": "Jill Castilano",
+      "section": "DataViz",
       "date": "November 2016",
-      "description": "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.",
-      "sponsored": true,
-      "link": "projects.thedp.com/2016/blahblah",
-      "image": "s3.aws.com/blahblahblah"
+      "description": "The Daily Pennsylvanian was able to gain access to all available Penn Course Review data, which contains an enormous number of student evaluations of their classes going back over a decade. Through data analysis, we've been able to address some of the most simple and complex questions students might wonder about their academics.",
+      "sponsored": false,
+      "link": "http://projects.thedp.com/2016/04/PCR/",
+      "image": "https://s3.amazonaws.com/media.dpn/56239_screen_shot_20170122_at_33810_pmo.png"
     }, {
       "title": "15 Places to Go in Philadelphia",
       "author": "Analyn Delos Santos",
       "section": "Arts & Culture",
-      "date": "November 2016",
-      "description": "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.",
+      "date": "May 2015",
+      "description": "The DP has compiled fifteen places you need to visit during your time in Philadelphia.",
       "sponsored": false,
       "link": "http://projects.thedp.com/2015/05/fifteen-places/",
       "image": "https://s3.amazonaws.com/media.dpn/56236_fifteenplacesheaderimgf.png"
