--- a/projects.json
+++ b/projects.json
@@ -1,6 +1,16 @@
 {
   "featured": [
     {
+      "title": "Best of Penn 2017",
+      "author": "Design: Julia Schorr; Web Dev: Maki Chung, Andrew Fischer",
+      "section": "Guides",
+      "date": "April 2017",
+      "description": "Yes, it's that time of year again: when the people of Penn dutifully cast their votes for the best eateries, shops and (yes) book stores on and around campus. See what you all voted to win our 20 Best of Penn categories.",
+      "sponsored": false,
+      "link": "http://projects.thedp.com/2017/04/best-of-penn/",
+      "image": "https://s3.amazonaws.com/media.dpn/58764_bestofpennogjpgo.jpeg"
+    },
+    {
       "title": "Penn Dictionary",
       "author": "Design: Camille Rapay; Web Dev: Maki Chung, Andrew Fischer",
       "section": "Under The Button",
@@ -8,7 +18,7 @@
       "description": "Presented by Under the Button, Penn Dictionary is your guide to Penn slang. Feel free to submit your own definition!",
       "sponsored": false,
       "link": "http://projects.thedp.com/2017/03/penn-dictionary/",
-      "image": "https://s3.amazonaws.com/media.dpn/58550_pdo.png"
+      "image": "https://s3.amazonaws.com/media.dpn/58550_pdf.png"
     },
     {
       "title": "Penn Bracket 2017",
@@ -19,7 +29,9 @@
       "sponsored": false,
       "link": "http://projects.thedp.com/2017/03/penn-bracket/",
       "image": "https://s3.amazonaws.com/media.dpn/57761_pennbracketogjpgf.jpeg"
-    },
+    }
+  ],
+  "articles": [
     {
       "title": "34th Street Dining Guide Spring 2017",
       "author": "Web Dev: Nolan Hill, Andrew Fischer",
@@ -29,9 +41,7 @@
       "sponsored": false,
       "link": "http://projects.thedp.com/2017/03/dining-guide/",
       "image": "https://s3.amazonaws.com/media.dpn/58557_dg2017f.png"
-    }
-  ],
-  "articles": [
+    },
     {
       "title": "Valentine's Day 2017",
       "author": "Design: Camille Rapay, Julia Schorr; Web Dev: Andrew Fischer",
