update penn10 og

--- a/projects.json
+++ b/projects.json
@@ -8,7 +8,7 @@
       "description": "Read about ten of Penn's extraordinary seniors, brought to you by 34th Street and made possible by Penn Alumni.",
       "sponsored": false,
       "link": "http://projects.34st.com/2017/04/penn10/",
-      "image": "https://s3.amazonaws.com/media.dpn/58800_15618_penn10oo.png"
+      "image": "https://s3.amazonaws.com/media.dpn/58893_penn10o.png"
     },
     {
       "title": "Best of Penn 2017",
