Add projects page, fix height for images

--- a/projects.json
+++ b/projects.json
@@ -33,6 +33,16 @@
   ],
   "articles": [
     {
+      "title": "The Story of 2017",
+      "author": "Web Dev: Alex Graves",
+      "section": "Year in Review",
+      "date": "December 2017",
+      "description": "The Daily Pennsylvanian's review of the most important stories of 2017.",
+      "sponsored": false,
+      "link": "http://projects.thedp.com/2017/12/year-in-review/",
+      "image": "https://snworksceo.imgix.net/dpn/2f6feaa5-2769-4617-8891-6ab35e732a02.sized-1000x1000.jpg"
+    },
+    {
       "title": "When a Penn student dies: Stories surrounding mental health on campus",
       "author": "Web Dev: Alex Graves",
       "section": "Projects",
